
ChangeLog
 [ + added, - removed, * changed ]
 + 04Jun2014 Preliminary OMPT support (tested with IBM OpenMP rte).
 + 14May2014 Added support for activating/pausing gremlins at run-time and options in the xml file to configure a repetitive pattern
 * 05May2014 Fixes for additional CUDA/Dimemas simulations
 * 25Apr2014 Changed the synchronization point for spawned processes from the start of the spawn call to the end.
 * 17Apr2014 MPI_Comm_spawn*: added time synchronization, fixed communications from child to parent.
             Online clustering: pass all counters to the clustering library, not only the common ones.
             Added online gremlins. 
             Added mock-up for standalone libraries and a binary loader.
             Removed debug messages.
 * 16Apr2014 Emit additional CUDA information for future Dimemas simulations
 * 14Apr2014 Bring libcudaompitrace to life
 * 03Apr2014 Fix improper access to MPI_STATUS_IGNORE in mpi_sendrecv, mpi_sendrecv_replace and MPI_Sendrecv_replace
             MFB 2.5 
               small fixes in documentation
               missing OpenCL bits
 * 27Mar2014 Reverted prototype of API call Extrae_define_event_type to receive parameters by reference to be compatible with Fortran
 * 19Mar2014 Sanitize examples' Makefiles (MPI basically) 
             Fix unmatched persistent requests with parallel merge.
 * 13Mar2014 Ensure DYNINSTAPI_RT_LIB is correctly set in extrae.sh/csh
 * 27Feb2014 Added option to run the on-line analysis at the end of the execution instead of periodically.
             Fixed bug in the Makefiles that caused that the online_env.sh script was not reinstalled after a reconfigure.
             Added routine to dump the states stack in the merger when the MAX_STATES limit is reached.
             The extrae.sh sources the necessary environment for the online analysis (no support for csh yet).
             Online examples updated.
             Updated version to 3.0rc6.