@@ -164,10 +164,11 @@
 		{ \
 			COPY_ACCUMULATED_COUNTERS_HERE(thread_id, burst_begin); \
 			BUFFER_INSERT(thread_id, TRACING_BUFFER(thread_id), burst_begin); \
-			COMM_STATS_WRAPPER(last_mpi_exit_time); \
+			COMM_STATS_WRAPPER(burst_begin.time); \
 			HARDWARE_COUNTERS_CHANGE(current_time, thread_id); \
 			HARDWARE_COUNTERS_READ (thread_id, burst_end, TRUE); \
 			BUFFER_INSERT(thread_id, TRACING_BUFFER(thread_id), burst_end); \
+			COMM_STATS_WRAPPER(burst_end.time); \
 			TRACE_MPI_CALLER (burst_end.time,evtvalue,offset) \
 			ACCUMULATED_COUNTERS_RESET(thread_id); \
 		} \
@@ -206,9 +207,10 @@
 				HARDWARE_COUNTERS_READ (thread_id, burst_begin, FALSE); \
 			} \
 			BUFFER_INSERT(thread_id, TRACING_BUFFER(thread_id), burst_begin); \
-			COMM_STATS_WRAPPER(last_mpi_exit_time); \
+			COMM_STATS_WRAPPER(burst_begin.time); \
 			HARDWARE_COUNTERS_READ (thread_id, burst_end, TRUE); \
 			BUFFER_INSERT(thread_id, TRACING_BUFFER(thread_id), burst_end); \
+			COMM_STATS_WRAPPER(burst_end.time); \
 			TRACE_MPI_CALLER (burst_end.time,evtvalue,offset) \
 		} \
 		else \
